include/qcs.hpp

typedef struct qcs_simulator qcs_simulator;
void qcs_simulator_init(qcs_simulator* sim);
void qcs_simulator_setup(qcs_simulator* sim);